Add initial classes