@@ -54,6 +54,9 @@
           <version>3.8.0</version>
           <configuration>
             <release>13</release>
+            <compilerArgs>
+              --enable-preview
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -63,6 +66,14 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>it.polimi.ingsw.App</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -81,15 +92,17 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <plugin>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-maven-plugin</artifactId>
-          <version>0.0.3</version>
-          <configuration>
-            <mainClass>it.polimi.ingsw.App</mainClass>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.3</version>
+        <configuration>
+          <mainClass>it.polimi.ingsw.App</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
